--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "Nerif",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."	
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
     "electron": "^1.4.8"
+  },
+  "dependencies": {
+    "tree-kill": "^1.1.0"
   }
 }
